infra/k8s/onboarding/sh-onboarding/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sh-onboarding-service
  namespace: onboarding
spec:
  selector:
    app: sh-onboarding
  ports:
    - port: 80
      targetPort: 80
