infra/k8s/onboarding/sh-onboarding/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sh-onboarding-ingress
  namespace: onboarding
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - sh-onboarding.first-task.codedang.com
      secretName: sh-onboarding-tls
  rules:
    - host: sh-onboarding.first-task.codedang.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sh-onboarding-service
                port:
                  number: 80
